--- a/src/main/webapp/views/style/Top.css
+++ b/src/main/webapp/views/style/Top.css
@@ -104,3 +104,14 @@ header a {
 	font-size: large;
 	font-weight: bold;
 }
+footer {
+	background: rgba(255, 255, 255, 0.1); 
+	backdrop-filter: blur(10px);
+	-webkit-backdrop-filter: blur(10px);
+/*	color: white;*/
+	text-align: center;
+	padding: 20px;
+	border-top: 1px solid rgba(255, 255, 255, 0.2);
+	position: relative;
+	z-index: 1;
+}
