--- a/src/main/webapp/views/style/Top.css
+++ b/src/main/webapp/views/style/Top.css
@@ -9,6 +9,7 @@ html, body {
     width: 100%;
     overflow-x: hidden;
     font-family: 'Playfair Display', serif;
+	background-color: #212121;
 }
 
 #main-banner {
